# diffusers_docker

./: compose.yml  makefile  pyproject.toml
docker/: dockerfile
src/: main.py
